# wakeup_2

./: Python_Qt实现方案 copy.md  Python_Qt实现方案.md  README.md  pyproject.toml  requirements.txt  语音唤醒需求文档.md
configs/: default.yaml
src/loona_wakeup/: __init__.py  app.py  config.py  main.py  models.py
src/loona_wakeup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/loona_wakeup/adapters/: __init__.py  live_udp_adapter.py  local_camera_mic_adapter.py  mock_adapter.py
src/loona_wakeup/engine/: __init__.py  decision_engine.py  utterance_gate.py  utterance_text_analyzer.py
src/loona_wakeup/ui/: camera_preview.py  main_window.py  theme.py  widgets.py
tests/: test_decision_engine.py  test_live_udp_adapter.py  test_local_camera_mic_adapter.py  test_utterance_gate.py  test_utterance_text_analyzer.py
tools/: send_live_frame.py
